--- a/render_static_site/index.html
+++ b/render_static_site/index.html
@@ -9,17 +9,17 @@
 
     <h1>Render Static Site</h1>
 
-    <p><strong>Name:</strong> Your Name</p>
+    <p><strong>Name:</strong> Ayush Patel</p>
 
     <p><strong>GitHub Location:</strong> 
-        <a href="https://github.com/yourusername/your-repo-name">
-            https://github.com/yourusername/your-repo-name
+        <a href="https://github.com/Apatel468/335">
+            https://github.com/Apatel468/335
         </a>
     </p>
 
     <p><strong>Terpconnect Location:</strong> 
-        <a href="https://terpconnect.umd.edu/~yourusername/">
-            https://terpconnect.umd.edu/~yourusername/
+        <a href="https://terpconnect.umd.edu/~patel468/">
+            https://terpconnect.umd.edu/~patel468/
         </a>
     </p>
 
